RESOLVED FIXED31166
[Qt] Shift-PageUp and Shift-PageDown events not supported on Qt
https://bugs.webkit.org/show_bug.cgi?id=31166
Summary [Qt] Shift-PageUp and Shift-PageDown events not supported on Qt
Chang Shu
Reported 2009-11-05 06:30:25 PST
Open the following page in QtLauncher: LayoutTests/editing/selection/shrink-selection-after-shift-pagedown.html Try to use Shift-PageUp and Shift-PageDown to select texts. Actual result: Shift-PageUp and Shift-PageDown behaves like PageUP and PageDown. Expected result: The selected text should change accordingly.
Attachments
fix patch (1.78 KB, patch)
2009-11-05 06:37 PST, Chang Shu
no flags
fix patch with some coding style change (3.05 KB, patch)
2009-11-05 06:51 PST, Chang Shu
no flags
Chang Shu
Comment 1 2009-11-05 06:37:54 PST
Created attachment 42567 [details] fix patch
Chang Shu
Comment 2 2009-11-05 06:51:06 PST
Created attachment 42568 [details] fix patch with some coding style change
Tor Arne Vestbø
Comment 3 2009-11-05 07:41:19 PST
Comment on attachment 42568 [details] fix patch with some coding style change Thanks
WebKit Commit Bot
Comment 4 2009-11-05 07:48:51 PST
Comment on attachment 42568 [details] fix patch with some coding style change Clearing flags on attachment: 42568 Committed r50563: <http://trac.webkit.org/changeset/50563>
WebKit Commit Bot
Comment 5 2009-11-05 07:48:56 PST
All reviewed patches have been landed. Closing bug.
Andras Becsi
Comment 6 2009-11-05 08:06:36 PST
(In reply to comment #5) > All reviewed patches have been landed. Closing bug. There still seems to be a problem with Shift+Up: -SUCCESS: The selection shrunk correctly +SUCCESS: The selected text is "YES YES YES YES YES YES YES YES YES NO".
Chang Shu
Comment 7 2009-11-05 08:21:05 PST
(In reply to comment #6) > (In reply to comment #5) > > All reviewed patches have been landed. Closing bug. > > There still seems to be a problem with Shift+Up: > > -SUCCESS: The selection shrunk correctly > +SUCCESS: The selected text is "YES YES YES YES YES YES YES YES YES NO". This patch does not fix the test case yet. The problem is addressed in bug 31122. please also check some comments I wrote for 31103. Thanks
Note You need to log in before you can comment on or make changes to this bug.