2009-11-05  Shu Chang  <Chang.Shu@nokia.com>

Reviewed by Tor Arne Vestbø.

        Add support for Shift-PageUp and Shift-PageDown key events.
        https://bugs.webkit.org/show_bug.cgi?id=31166

        Test: LayoutTests/editing/selection/shrink-selection-after-shift-pagedown.html

        * WebCoreSupport/EditorClientQt.cpp:
        (WebCore::EditorClientQt::handleKeyboardEvent):

Canonical link: https://commits.webkit.org/41993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50563 268f45cc-cd09-0410-ab3c-d52691b4dbfc